--- a/src/dfa.css
+++ b/src/dfa.css
@@ -12,6 +12,7 @@ body {
     filter: blur(3px);
     opacity: 30%;
     top: 0;
+    bottom: 0;
     /* Center and scale the image nicely */
     background-position: center;
     background-size: cover;
@@ -22,10 +23,17 @@ body {
     z-index: -3;
 }
 
+#icon {
+    min-width: 160px;
+    max-width: 160px;
+    height: auto;
+}
+
 nav {
     background-color: #046791;
     color: #F7F7F7;
     margin-bottom: 20px;
+    display: flex;
 }
 
 nav>* {
@@ -33,16 +41,27 @@ nav>* {
     justify-content: space-between;
     width: min(800px, 100%);
     margin: 0 auto;
+    flex-wrap: wrap;
 }
 
-nav>*>*>*>*{
+nav>div>ul {
+    margin: 0 auto;
+}
+
+nav>div>ul>li {
+    padding: 7px;
+}
+
+nav>div>ul>li>a{
     color: #F7F7F7;
+    font-size: 0.7 rem;
 }
 
 #state-container{
     max-width: 600px;
     margin: 0 auto;
     display: flex;
+    text-align: right;
 }
 
 
@@ -70,13 +89,11 @@ article.hover:hover{
 
 #splash {
     border-radius: 50%;
-    height: 150px;
     width: 150px;
+    height: auto;
 }
 
-#icon {
-    height: 60px;
-}
+
 
 
 
@@ -115,7 +132,7 @@ ul {
 }
 
 .back {
-    font-size: 2.5rem;
+    font-size: 2rem;
     max-width: fit-content;
     display: flex;
     margin: 0 auto;
