--- a/src/dfa.css
+++ b/src/dfa.css
@@ -1,26 +1,21 @@
 :root {
     --border-radius: 20px;
-
 }
 
-body {
-    min-height: 100vh;
-}
 #background-image {
     background-image: url("../resources/dental-background.jpg");
     position: fixed;
     filter: blur(3px);
     opacity: 30%;
-    top: 0;
     bottom: 0;
     /* Center and scale the image nicely */
-    background-position: center;
-    background-size: cover;
+    background-position: top;
+    background-size: 100%;
     height: 100%;
     width: 100vw;
     margin: 0px;
     padding: 0px;
-    z-index: -3;
+    z-index: -1;
 }
 
 #icon {
@@ -92,10 +87,6 @@ article.hover:hover{
     width: 150px;
     height: auto;
 }
-
-
-
-
 
 #header {
     text-align:center;
